# ChangeLog for x11-drivers/xf86-input-evdev
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-drivers/xf86-input-evdev/ChangeLog,v 1.169 2011/03/05 18:09:14 xarthisius Exp $

  05 Mar 2011; Kacper Kowalik <xarthisius@gentoo.org>
  xf86-input-evdev-2.6.0.ebuild:
  ppc64 stable wrt #354237

  05 Mar 2011; Raúl Porcel <armin76@gentoo.org> xf86-input-evdev-2.6.0.ebuild:
  alpha/arm/ia64/sh/sparc stable wrt #354237

  23 Feb 2011; Jeroen Roovers <jer@gentoo.org> xf86-input-evdev-2.6.0.ebuild:
  Stable for HPPA (bug #354237).

  15 Feb 2011; Tomáš Chvátal <scarabeus@gentoo.org>
  -xf86-input-evdev-2.4.0.ebuild:
  old

  14 Feb 2011; Kacper Kowalik <xarthisius@gentoo.org>
  xf86-input-evdev-2.6.0.ebuild:
  ppc stable wrt #344827, #354237

  12 Feb 2011; Raúl Porcel <armin76@gentoo.org> xf86-input-evdev-2.5.0.ebuild:
  alpha/ia64/sh/sparc stable wrt #344827

  12 Feb 2011; Christian Faulhammer <fauli@gentoo.org>
  xf86-input-evdev-2.6.0.ebuild:
  stable x86, bug 354237

  12 Feb 2011; Markos Chandras <hwoarang@gentoo.org>
  xf86-input-evdev-2.6.0.ebuild:
  Stable on amd64 wrt bug #354237

*xf86-input-evdev-2.6.0 (12 Jan 2011)

  12 Jan 2011; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  +xf86-input-evdev-2.6.0.ebuild:
  Version bump.

  31 Dec 2010; Jeroen Roovers <jer@gentoo.org> xf86-input-evdev-2.5.0.ebuild:
  Stable for HPPA (bug #344827).

  29 Dec 2010; Markus Meier <maekke@gentoo.org> xf86-input-evdev-2.5.0.ebuild:
  arm stable, bug #344827

  25 Dec 2010; Christian Faulhammer <fauli@gentoo.org>
  xf86-input-evdev-2.5.0.ebuild:
  x86 stable, bug 344827

  23 Dec 2010; Samuli Suominen <ssuominen@gentoo.org>
  xf86-input-evdev-2.5.0.ebuild:
  amd64 stable wrt #344827

  19 Dec 2010; Samuli Suominen <ssuominen@gentoo.org>
  xf86-input-evdev-2.5.0.ebuild:
  ppc64 stable wrt #344827

  21 Oct 2010; Tomáš Chvátal <scarabeus@gentoo.org>
  -xf86-input-evdev-2.3.2.ebuild:
  old
