@@ -1,6 +1,10 @@
 # ChangeLog for x11-drivers/xf86-video-savage
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-drivers/xf86-video-savage/ChangeLog,v 1.63 2011/03/05 15:40:42 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-drivers/xf86-video-savage/ChangeLog,v 1.64 2011/03/07 21:11:21 scarabeus Exp $
+
+  07 Mar 2011; Tomáš Chvátal <scarabeus@gentoo.org>
+  -xf86-video-savage-2.3.1.ebuild:
+  old
 
   05 Mar 2011; Raúl Porcel <armin76@gentoo.org>
   xf86-video-savage-2.3.2.ebuild:
